[gd_scene load_steps=11 format=2]

[ext_resource path="res://World/podium_grey_w_green.png" type="Texture" id=1]
[ext_resource path="res://World/podium_grey_w_red.png" type="Texture" id=2]
[ext_resource path="res://World/Podium.gd" type="Script" id=3]
[ext_resource path="res://Music and Sounds/Click_26.wav" type="AudioStream" id=4]
[ext_resource path="res://Music and Sounds/Percussion - Click 3.wav" type="AudioStream" id=5]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 46, 45 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 46, 45 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="CircleShape2D" id=4]
radius = 18.0278

[sub_resource type="CapsuleShape2D" id=5]
radius = 13.0
height = 2.0

[node name="Podium" type="Node2D"]
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1, 0 )
shape = SubResource( 4 )

[node name="Click1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.75

[node name="Beep1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -9.0
pitch_scale = 1.35

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1, 3 )
shape = SubResource( 5 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
